Fixed alignment of text inside the notification

--- a/js-library/src/css/notification.less
+++ b/js-library/src/css/notification.less
@@ -28,7 +28,7 @@
       margin-left: 70px;
       font-size: 15px;
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-      padding: 15px 20px;
+      padding: 18px 20px;
       display: inline-block;
       line-height: 1.5;
       vertical-align: middle;
